@@ -183,32 +183,32 @@ uint16_t USB_GetDescriptor(const uint16_t wValue, const uint8_t wIndex, void** c
 	switch (DescriptorType)
 	{
 		case DTYPE_Device:
-			Address = DESCRIPTOR_ADDRESS(DeviceDescriptor);
+			Address = (void*)&DeviceDescriptor;
 			Size    = sizeof(USB_Descriptor_Device_t);
 			break;
 		case DTYPE_Configuration:
-			Address = DESCRIPTOR_ADDRESS(ConfigurationDescriptor);
+			Address = (void*)&ConfigurationDescriptor;
 			Size    = sizeof(USB_Descriptor_Configuration_t);
 			break;
 		case DTYPE_String:
 			if (!(DescriptorNumber))
 			{
-				Address = DESCRIPTOR_ADDRESS(LanguageString);
+				Address = (void*)&LanguageString;
 				Size    = LanguageString.Header.Size;
 			}
 			else
 			{
-				Address = DESCRIPTOR_ADDRESS(ProductString);
+				Address = (void*)&ProductString;
 				Size    = ProductString.Header.Size;
 			}
 			
 			break;
 		case DTYPE_HID:
-			Address = DESCRIPTOR_ADDRESS(ConfigurationDescriptor.HIDDescriptor);
+			Address = (void*)&ConfigurationDescriptor.HIDDescriptor;
 			Size    = sizeof(USB_Descriptor_HID_t);
 			break;
 		case DTYPE_Report:
-			Address = DESCRIPTOR_ADDRESS(HIDReport);
+			Address = (void*)&HIDReport;
 			Size    = sizeof(HIDReport);
 			break;
 	}
