@@ -19,6 +19,7 @@
   *    interface is skipped
   *  - Clarified the size of library tokens which accept integer values in the Compile Time Tokens page, values now use the smallest datatype
   *    inside the library that is able to hold their defined value to save space
+  *  - Removed DESCRIPTOR_ADDRESS() macro as it was largely supurflous and only served to obfuscate code
   *
   *
   *  \section Sec_ChangeLog090510 Version 090510
